--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@meforma/vue-toaster": "^1.3.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "sass": "^1.87.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
